# galapagos

./: .gitignore  README.md  __main__.py  galapagos_turtle.py  pyproject.toml  requirements.txt  test.py
src/galapagos/: galapagos.py
test/: test.py
