
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galapagos-turtle"
version = "1.0.0"
description = "im bored"
readme = "README.md"
authors = [{ name = "wheatwhole", email = "wheatrefined@gmail.com" }]
license = { file = "LICENSE" }

keywords = ["galapagos", "turtle"]
dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',
]

requires-python = ">=3.9"

[project.scripts]
galapagos = "__main__:main"

[tool.bumpver]
current_version = "1.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version' = "{version}"',
]

