
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galapagos_turtle"
version = "2.1.3"
description = "im bored"
readme = "README.md"
authors = [{ name = "wheatwhole", email = "wheatrefined@gmail.com" }]
license = { file = "LICENSE" }

keywords = ["galapagos", "turtle"]
dependencies = []

requires-python = ">=3.9"

[project.scripts]
galapagos = "__main__:main"

[tool.bumpver]
current_version = "2.1.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

